<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:icon="@android:drawable/ic_menu_manage"
                  android:title="@string/settings">

    <PreferenceCategory
        android:title="General Settings">

        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/measure_system"
            android:entries="@array/measure_options"
            android:entryValues="@array/measure_option_values"
            android:key="measure_system"
            android:summary="@string/measure_system_description"
            android:title="@string/measure_system"
            android:layout="@layout/preference_indented"
            />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="full_screen"
            android:summary="@string/full_screen_display_description"
            android:title="@string/full_screen_display"
            android:layout="@layout/preference_indented"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/csv_export_options">

        <ListPreference
            android:defaultValue=","
            android:dialogTitle="@string/csv_field_delimiter"
            android:entries="@array/csv_field_delim_options"
            android:entryValues="@array/csv_field_delim_values"
            android:key="csv_field_delimiter"
            android:summary="@string/csv_field_delimiter_description"
            android:title="@string/csv_field_delimiter"
            android:layout="@layout/preference_indented"
            />

        <ListPreference
            android:defaultValue="\n"
            android:dialogTitle="@string/csv_rec_delimiter"
            android:entries="@array/csv_record_delim_options"
            android:entryValues="@array/csv_record_delim_values"
            android:key="csv_record_delimiter"
            android:summary="@string/csv_rec_delimiter_description"
            android:title="@string/csv_rec_delimiter"
            android:layout="@layout/preference_indented"
            />

        <CheckBoxPreference
            android:key="csv_text_quoted"
            android:summary="@string/csv_text_quoted_description"
            android:title="@string/csv_text_quoted"
            android:layout="@layout/preference_indented"
            />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="send_after_export"
            android:summary="@string/send_after_export_descr"
            android:title="@string/send_after_export"
            android:layout="@layout/preference_indented"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="OBD Options">

        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/select_medium"
            android:entries="@array/empty"
            android:entryValues="@array/empty"
            android:key="comm_medium"
            android:title="@string/select_medium"
            android:layout="@layout/preference_indented"
            />

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="comm_medium"
            android:key="bt_secure_connection"
            android:summary="@string/secure_connect_description"
            android:title="@string/secure_connect"
            android:layout="@layout/preference_indented"
            />

        <EditTextPreference
            android:capitalize="characters"
            android:defaultValue="192.168.0.10"
            android:inputType="textUri"
            android:key="device_address"
            android:summary="@string/device_address_description"
            android:title="@string/device_address"
            android:layout="@layout/preference_indented"
            />

        <EditTextPreference
            android:capitalize="characters"
            android:defaultValue="35000"
            android:inputType="number"
            android:key="device_port"
            android:summary="@string/device_port_description"
            android:title="@string/device_port"
            android:layout="@layout/preference_indented"
            />

        <ListPreference
            android:defaultValue="38400"
            android:dialogTitle="@string/comm_baudrate"
            android:entries="@array/baud_rates"
            android:entryValues="@array/baud_rates"
            android:key="comm_baudrate"
            android:title="@string/comm_baudrate"
            android:summary="@string/comm_baudrate_description"
            android:layout="@layout/preference_indented"
            />

        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/select_protocol"
            android:entries="@array/empty"
            android:entryValues="@array/empty"
            android:key="protocol"
            android:title="@string/select_protocol"
            android:layout="@layout/preference_indented"
            />

        <MultiSelectListPreference
            android:defaultValue="@array/empty"
            android:dialogTitle="@string/items_for_display"
            android:entries="@array/empty"
            android:entryValues="@array/empty"
            android:key="data_items"
            android:summary="@string/items_for_display_descr"
            android:title="@string/items_for_display"
            android:layout="@layout/preference_indented"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/elm_options">

        <EditTextPreference
            android:capitalize="characters"
            android:defaultValue=""
            android:key="elm_custom_init_cmds"
            android:minLines="5"
            android:summary="@string/elm_custom_init_descr"
            android:title="@string/elm_custom_init"
            android:layout="@layout/preference_indented"
            />

        <ListPreference
            android:dialogTitle="@string/elm_adaptive_timing"
            android:key="adaptive_timing_mode"
            android:summary="@string/elm_adaptive_timing_descr"
            android:title="@string/elm_adaptive_timing"
            android:layout="@layout/preference_indented"
            />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="elm_reset_on_nrc"
            android:summary="@string/elm_reset_on_nrc_descr"
            android:title="@string/elm_reset_on_nrc"
            android:layout="@layout/preference_indented"
            />

        <EditTextPreference
            android:capitalize="characters"
            android:defaultValue="3"
            android:inputType="number"
            android:key="data_disable_max"
            android:summary="@string/data_disable_max_description"
            android:title="@string/data_disable_max"
            android:layout="@layout/preference_indented"
            />

        <MultiSelectListPreference
            android:defaultValue="@array/empty"
            android:dialogTitle="@string/disable_elm_cmds"
            android:entries="@array/empty"
            android:entryValues="@array/empty"
            android:key="elm_cmd_disable"
            android:summary="@string/disable_elm_cmds_descr"
            android:title="@string/disable_elm_cmds"
            android:layout="@layout/preference_indented"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Debugging">

        <ListPreference
            android:defaultValue="INFO"
            android:dialogTitle="@string/logging_level"
            android:entries="@array/logging_options"
            android:entryValues="@array/logging_options"
            android:key="log_master"
            android:summary="@string/logging_level_description"
            android:title="@string/logging_level"
            android:layout="@layout/preference_indented"
            />

    </PreferenceCategory>

</PreferenceScreen>