<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/chart_selected"
        android:icon="@drawable/ic_chart"
        app:showAsAction="always"
        android:title="@string/chart"/>
    <item
        android:id="@+id/dashboard_selected"
        android:icon="@drawable/ic_speedometer"
        app:showAsAction="always"
        android:title="@string/dashboard"/>
    <item
        android:id="@+id/hud_selected"
        android:icon="@drawable/ic_headup"
        app:showAsAction="always"
        android:title="@string/hud"/>
    <item
        android:id="@+id/filter_selected"
        android:icon="@drawable/ic_filter"
        app:showAsAction="always"
        android:title="@string/filter"/>
</menu>
